FIX: Implemented Add symptom to organ at ManageOrgansAndSymptomsComponent